<resources>
    <string name="app_name">sampleapp</string>

    <string name="nugu_redirect_scheme" translatable="false">YOUR REDIRECT URI SCHEME</string>
    <string name="nugu_redirect_host" translatable="false">YOUR REDIRECT URI HOST</string>

    <string name="service_finished">{sampleapp}의 누구 서비스가 종료되었습니다.</string>
    <string name="sdk_not_initialized">SDK not initialized, please try again</string>
    <string name="button_fab_description">start listening</string>

    <string name="volume_mute">휴대폰 미디어 볼륨이 무음상태입니다.\n휴대폰의 볼륨을 조절해주세요.</string>

    <string name="device_gw_error_001">인터넷에 연결할 수 없습니다. 디바이스의 인터넷 연결 상태를 확인해주세요.</string>
    <string name="device_gw_error_002">누구 서비스와 연결할 수 없습니다. 잠시 후 다시 말씀해주세요.</string>
    <string name="device_gw_error_003">누구 서비스와 연결할 수 없습니다. 디바이스 연결 정보를 변경 해주세요.</string>
    <string name="device_gw_error_006">누구 서비스 중에 문제가 발생했어요. 잠시 후 다시 말씀해주세요.</string>

    <string name="code_user_account_closed">탈퇴한 사용자 입니다.</string>
    <string name="code_user_account_paused">휴면 상태 사용자 입니다.</string>
    <string name="code_user_device_disconnected">연결 해제된 상태입니다.</string>
    <string name="code_user_device_unexpected">내부 검증 토큰이 불일치 합니다.</string>

    <string name="error_unauthorized">인가되지 않은 사용자 정보 입니다.</string>
    <string name="error_unauthorized_client">인가되지 않은 클라이언트 입니다.</string>
    <string name="error_invalid_token">유효하지 않은 토큰 입니다.</string>
    <string name="error_invalid_client">유효하지 않은 클라이언트 정보 입니다.</string>
    <string name="error_access_denied">접근이 거부 되었습니다.</string>

    <string name="menu_setting">setting</string>
    <string name="setting_account_info">T아이디 회원정보</string>
    <string name="setting_service">서비스 관리</string>
    <string name="setting_enable_nugu">인공지능 NUGU 사용하기</string>
    <string name="setting_enable_trigger">이름을 불러 대화 시작하기</string>
    <string name="setting_wakeup_word">부르는 이름</string>
    <string name="setting_recognition_beep">대화 시작 효과음</string>
    <string name="setting_enable_recognition_beep">인식 성공 효과음</string>
    <string name="setting_enable_response_fail_beep">응답 실패 효과음</string>
    <string name="setting_floating_button">플로팅 버튼 사용</string>
    <string name="setting_privacy">개인정보 처리방침</string>
    <string name="setting_agreement">이용약관</string>
    <string name="setting_revoke">연결 해제</string>
    <string name="setting_anonymous_summary">로그인해주세요</string>
</resources>
